Questions added to pages section.  "List Item Marker" replaced with "Counter Suffix".  Fixes #98 .

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
       <p>When Ethiopic Wordspace (፡) is used to separate words, there may still be some valid application for white space “ ”. White space is permittable to support the following formatting needs:</>
       <ul>
         <li>Indentation.</li>
-        <li>Following a list item marker.</li>
+        <li>Following a counter suffix.</li>
         <li>Within a numeric sequence, like a phone number.</li>
         <li>Within a date format (sometimes, not always).</li>
         <li>Within a scripture reference (sometimes not always).</li>
@@ -597,32 +597,32 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
       </div>
           <!-- See reference: http://unicode-search.net/unicode-namesearch.pl?term=DIAMOND -->
         </section>
-    <section id="list_item_marker">
-          <h4>Ordered List Item Marker</h4>
-          <p>In Ethiopic ordered lists a number of symbols are used for the list marker (suffix).
+    <section id="counter_suffix">
+          <h4>Ordered List Counter Suffix</h4>
+          <p>In Ethiopic ordered lists a number of symbols are used for the counter suffix.
              For example: "/" , "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
           <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>What are the preferred list marker symbols? What is the best default?</li>
+              <li>What are the preferred counter suffix symbols? What is the best default?</li>
               <li>How much, if any, white space follows the suffix? Perhaps the same amount of space as would follow a bullet symbol?</li>
-              <li>Do copy editors or publishers set a policy for list item markers, or leave it up to the author to decide?</li>
+              <li>Do copy editors or publishers set a policy for counter suffix, or leave it up to the author to decide?</li>
               <li>Of interest: when are ordered lists first found in Ethiopic writing and in what form?</li>
             </ol>
       </div>
         </section>
-    <section id="list_item_marker_alignment">
-          <h4>List Item Marker Alignment</h4>
+    <section id="counter_suffix_alignment">
+          <h4>Counter Suffix Alignment</h4>
           <p>Ethiopic corpus will present lists with two styles of alignment. These are a left side alignment at the
-        list counter, or alignment along the list marker (suffix). Layout software will align a list at the marker in
+        list counter, or alignment along the counter suffix. Layout software will align a list at the suffix in
         keeping with the later style.  The former style (left justified at counter) may reflect a limitation of the
         layout technology employed and not a preference of the author, copy editor or typesetter. A depiction of these
         two alignment styles is presented in the following figures:</p>
-          <figure id="list_item_marker_left_justified"> <img src="images/list-aligned-on-counter-left.png" alt=""/>
+          <figure id="counter_suffix_left_justified"> <img src="images/list-aligned-on-counter-left.png" alt=""/>
         <figcaption>Alphabetical list aligned justified on counter left.</figcaption>
       </figure>
-          <figure id="list_item_marker_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt=""/>
-        <figcaption>Alphabetical list aligned on marker.</figcaption>
+          <figure id="counter_suffix_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt=""/>
+        <figcaption>Alphabetical list aligned on suffix.</figcaption>
       </figure>
           <div class="issues">
         <p>Issues/Questions:</p>
@@ -633,12 +633,12 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
         </section>
     <section id="inline_lists">
           <h4>Inline Lists</h4>
-          <p><em>How much space after marker? Is the space after marker the different when Ethiopic wordspace is in use?</em></p>
+          <p><em>How much space after counter suffix? Is the space after suffix the different when Ethiopic wordspace is in use?</em></p>
           <figure id="inline_list_with_wordspaces"> <img src="images/inline-list-with-wordspace.png" alt=""/>
-        <figcaption>Ethiopic inline list sample using wordspaces with 3 spacings (none, hair and thin) following list marker.</figcaption>
+        <figcaption>Ethiopic inline list sample using wordspaces with 3 spacings (none, hair and thin) following the counter suffix.</figcaption>
       </figure>
           <figure id="inline_list_with_space"> <img src="images/inline-list-with-space.png" alt=""/>
-        <figcaption>Ethiopic inline list sample using spaces with 3 spacings (none, hair and thin) following list marker.</figcaption>
+        <figcaption>Ethiopic inline list sample using spaces with 3 spacings (none, hair and thin) following the counter suffix.</figcaption>
       </figure>
         </section>
     <section id="numbered_lists">
@@ -648,8 +648,8 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
           <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>What is the list item marker preference with Ethiopic numbers?</li>
-              <li>What is the list item marker preference with western numbers?</li>
+              <li>What is the counter suffix preference with Ethiopic numbers?</li>
+              <li>What is the counter suffix preference with western numbers?</li>
               <li>Are there any sublist (nested list) considerations?</li>
             </ol>
       </div>
@@ -1284,6 +1284,20 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
       <figure> <img src="images/GeezMargins.png" alt=" "/>
         <figcaption>Page margins in Ge’ez literature.</figcaption>
       </figure>
+      <p>These practices are not well understood by the authors and comprehensive is sought from experts.</p> 
+
+      <div class="issues">
+        <p>Issues/Questions:</p>
+          <ol>
+            <li>What are the margin requirements for the various classes of Ethiopic literature?</li>
+            <li>What works should be in multiple columns? How many columns and what width and spacing should be between them?</li>
+            <li>Is header formatting different for Ethiopic documents than Western?</li>
+            <li>Is footer formatting different for Ethiopic documents than Western?</li>
+            <li>Is page number positioning and formatting different for Ethiopic documents than Western?</li>
+            <li>Does Ethiopic page layout have any special requirements that are different from Western?</li>
+          </ol>
+        </div>
+
       <section id="h_preface_page_numbering">
     <h3>Preface Page Numbering</h3>
     <p><em>Note the practice of using two numeral systems for page numbering in books.  For example in preface paging Ethiopic numerals may be used in documents where page numbers use western numerals.  This is analagous to the practice in western literature of using Roman numerals in preface numbering and western numerals afterwards. A general statement should be made in this document that Ethiopic Numerals should Replace Roman Numerals where the later is a default.</em></p>
@@ -1319,7 +1333,8 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
   </section>
       <section id="other">
     <h2>Other</h2>
-    <p>Literature best practices of interest for the survey that are not know to be layout topics</p>
+    <p>Other best practices of interest for literature that may not fall under "layout" directly but would be important to good writing style
+       and can be checked syntactically by software to help produce a well formed document.</p>
     <section id="ethiopic_abbreviation_formation">
           <h3>Abbreviation Formation</h3>
           <p>Abbreviations in Ethiopic languages will apply an abbreviation marker ("/" or ".") placed between the first letters of each word in a phrase.
@@ -1759,7 +1774,7 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
     <dt>&lt;ol&gt;</dt>
     <dd>Covered in <a href="#numbered_lists"></a>.</dd>
     <dt>&lt;li&gt;</dt>
-    <dd>Covered in <a href="#list_item_marker"></a>.</dd>
+    <dd>Covered in <a href="#counter_suffix"></a>.</dd>
     <dt>&lt;dl&gt;</dt>
     <dd>Review: Find a sample in traditional publishing.</dd>
     <dt>&lt;dt&gt;</dt>
