--- a/index.html
+++ b/index.html
@@ -1173,53 +1173,6 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
       <p>Classical Ethiopic writing does not feature a letter shape stylistic change to communicate word emphasis. In religious works, the color red will be used to emphasize a spiritual aspect of a word in a passage.  </p>
       <p>Emphasis in modern Ethiopic writing will employ every emphasis device available from the available publishing technology (e.g. underline, slant, embolden, letter size, letter outline, background shapes, etc.). The practice however is idiosyncratic and inconsistently applied leading to debate and disagreement within the publishing community.</p>
       <p>The following subsections present a proposed best practice of the authors.</p>
-      <section id="heading_emphasis">
-    <h3>Section Headings</h3>
-    <p><em>[Consider if all or part of this section should be integrated with <a href="#html5-alignment"></a>]</em></p>
-    <p>The default section headings stylistic changes (size, weight) applied to Roman script in word processors and web browsers are generally applicable to Ethiopic literature.  In classic and modern layout practices applied to books and magazines, the document and chapter titles will be centered. </p>
-    <p>The use of underlining and color changes are not recommended for Ethiopic headings as they are not a traditional practice.</p>
-    <p>The following presents the six heading levels defined in the HTML standard and their applicable context in Ethiopic literature.  Samples are provided here for review and consideration of the default settings for letter sizing and line spacing.</p>
-    <dl>
-          <dt>Heading 1</dt>
-          <dd>To be applied for document titles (usually centered). Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h1.html</a></dd>
-          <dt>Heading 2</dt>
-          <dd>To be applied for chapter titles (usually centered). Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h2.html</a></dd>
-          <dt>Heading 3</dt>
-          <dd>To be applied for chapter section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h3.html</a></dd>
-          <dt>Heading 4</dt>
-          <dd>To be applied for chapter sub-section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h4.html</a></dd>
-          <dt>Heading 5</dt>
-          <dd>To be applied for chapter sub-sub-section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h5.html</a></dd>
-          <dt>Heading 6</dt>
-          <dd>To be applied for chapter sub-sub-sub-section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h6.html</a></dd>
-        </dl>
-    <p>Relative sizes for comparison: <span style="display: inline; color: black; font-size: 2em; font-weight: bold;">አርእስት</span
-      ><span style="display: inline; color: black; font-size: 1.5em; font-weight: bold;">አርእስት</span
-      ><span style="display: inline; color: black; font-size: 1.17em; font-weight: bold;">አርእስት</span
-      ><span style="display: inline; color: black; font-weight: bold;">አርእስት</span
-      ><span style="display: inline; color: black; font-size: .83em; font-weight: bold;">አርእስት</span
-      ><span style="display: inline; color: black; font-size: .67em; font-weight: bold;">አርእስት</span> </p>
-    <p>The following illustrates vertical spacing of the heading sizes. Heading and paragraph blocks are highlighted to illuminate spacing boundaries.</p>
-    <h1 style="display: block; color: black; font-size: 2em; font-weight: bold; background-color: #99ccff">አርእስት 1</h1>
-    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h2 style="display: block; color: black; font-size: 1.5em; font-weight: bold; background-color: #99ccff">አርእስት 2</h2>
-    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h3 style="display: block; color: black; font-size: 1.17em; font-weight: bold; background-color: #99ccff">አርእስት 3</h3>
-    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h4 style="display: block; color: black; font-weight: bold; background-color: #99ccff">አርእስት 4</h4>
-    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h5 style="display: block; color: black; font-size: .83em; font-weight: bold; background-color: #99ccff">አርእስት 5</h5>
-    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h6 style="display: block; color: black; font-size: .67em; font-weight: bold; background-color: #99ccff">አርእስት 6</h6>
-    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <div class="issues">
-          <p>Issues/Questions:</p>
-          <ol>
-        <li>Should heading sizes 1 and 2 be centered by default, or should this be left to custom stylesheet?</li>
-        <li>What percentage emboldened when a bold designed typeface is not available?</li>
-      </ol>
-        </div>
-  </section>
       <section id="emphasis_within_prose">
     <h3>Emphasis Within Prose</h3>
     <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
@@ -1298,17 +1251,18 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
           </ol>
         </div>
 
-      <section id="h_preface_page_numbering">
+    <section id="h_preface_page_numbering">
     <h3>Preface Page Numbering</h3>
     <p><em>Note the practice of using two numeral systems for page numbering in books.  For example in preface paging Ethiopic numerals may be used in documents where page numbers use western numerals.  This is analagous to the practice in western literature of using Roman numerals in preface numbering and western numerals afterwards. A general statement should be made in this document that Ethiopic Numerals should Replace Roman Numerals where the later is a default.</em></p>
-  </section>
     </section>
-<section id="h_document">
+    </section>
+
+    <section id="h_document">
       <h2>Document</h2>
       <p><em>Discuss: Distinguished requirements: book/ebook/page, Inter-page spacing, first and last pages, TOC and lists, indexes, appendices (e.g. bibliographies, glossaries), endnotes.</em></p>
       <section id="h_document_structure">
-    <h3>Document Structure</h3>
-    <p> መጽሐፍ<br/>
+      <h3>Document Structure</h3>
+      <p>መጽሐፍ<br/>
           &nbsp;&nbsp;አርእስት<br/>
           &nbsp;&nbsp;መታሰቢያ<br/>
           &nbsp;&nbsp;መስታወሻ<br/>
@@ -1329,9 +1283,70 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
           &nbsp;&nbsp;&nbsp;&nbsp;⋮<br/>
           &nbsp;&nbsp;ሙዳዬ ቃላት<br/>
           &nbsp;&nbsp;ዋቢ መጻሕፍት<br/>
-          &nbsp;&nbsp;መጠቍ ም </p>
+          &nbsp;&nbsp;መጠቍ ም</p>
+
+      <div class="issues">
+        <p>Issues/Questions:</p>
+          <ol>
+            <li>Are these sections correct? Are any missing?</li>
+            <li>What sections are optional?</li>
+            <li>Do any sections require special formatting?</li>
+          </ol>
+        </div>
+
   </section>
-      <section id="other">
+
+
+  <section id="section_headings">
+    <h3>Section Headings</h3>
+    <p><em>[Consider if all or part of this section should be integrated with <a href="#html5-alignment"></a>]</em></p>
+    <p>The default section headings stylistic changes (size, weight) applied to Roman script in word processors and web browsers are generally applicable to Ethiopic literature.  In classic and modern layout practices applied to books and magazines, the document and chapter titles will be centered. </p>
+    <p>The use of underlining and color changes are not recommended for Ethiopic headings as they are not a traditional practice.</p>
+    <p>The following presents the six heading levels defined in the HTML standard and their applicable context in Ethiopic literature.  Samples are provided here for review and consideration of the default settings for letter sizing and line spacing.</p>
+    <dl>
+          <dt>Heading 1</dt>
+          <dd>To be applied for document titles (usually centered). Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h1.html</a></dd>
+          <dt>Heading 2</dt>
+          <dd>To be applied for chapter titles (usually centered). Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h2.html</a></dd>
+          <dt>Heading 3</dt>
+          <dd>To be applied for chapter section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h3.html</a></dd>
+          <dt>Heading 4</dt>
+          <dd>To be applied for chapter sub-section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h4.html</a></dd>
+          <dt>Heading 5</dt>
+          <dd>To be applied for chapter sub-sub-section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h5.html</a></dd>
+          <dt>Heading 6</dt>
+          <dd>To be applied for chapter sub-sub-sub-section titles. Default display properties: <a href="https://www.w3.org/TR/html-markup/h1.html#h1">https://www.w3.org/TR/html-markup/h6.html</a></dd>
+        </dl>
+    <p>Relative sizes for comparison: <span style="display: inline; color: black; font-size: 2em; font-weight: bold;">አርእስት</span
+      ><span style="display: inline; color: black; font-size: 1.5em; font-weight: bold;">አርእስት</span
+      ><span style="display: inline; color: black; font-size: 1.17em; font-weight: bold;">አርእስት</span
+      ><span style="display: inline; color: black; font-weight: bold;">አርእስት</span
+      ><span style="display: inline; color: black; font-size: .83em; font-weight: bold;">አርእስት</span
+      ><span style="display: inline; color: black; font-size: .67em; font-weight: bold;">አርእስት</span> </p>
+    <p>The following illustrates vertical spacing of the heading sizes. Heading and paragraph blocks are highlighted to illuminate spacing boundaries.</p>
+    <h1 style="text-align: center; display: block; color: black; font-size: 2em; font-weight: bold; background-color: #99ccff">አርእስት 1</h1>
+    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
+    <h2 style="text-align: center; display: block; color: black; font-size: 1.5em; font-weight: bold; background-color: #99ccff">አርእስት 2</h2>
+    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
+    <h3 style="text-align: center; display: block; color: black; font-size: 1.17em; font-weight: bold; background-color: #99ccff">አርእስት 3</h3>
+    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
+    <h4 style="text-align: center; display: block; color: black; font-weight: bold; background-color: #99ccff">አርእስት 4</h4>
+    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
+    <h5 style="text-align: center; display: block; color: black; font-size: .83em; font-weight: bold; background-color: #99ccff">አርእስት 5</h5>
+    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
+    <h6 style="text-align: center; display: block; color: black; font-size: .67em; font-weight: bold; background-color: #99ccff">አርእስት 6</h6>
+    <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
+    <div class="issues">
+      <p>Issues/Questions:</p>
+      <ol>
+        <li>Should heading sizes 1 and 2 be centered by default, or should this be left to custom stylesheet?</li>
+        <li>What percentage emboldened when a bold designed typeface is not available?</li>
+      </ol>
+    </div>
+    </section>
+
+
+    <section id="other">
     <h2>Other</h2>
     <p>Other best practices of interest for literature that may not fall under "layout" directly but would be important to good writing style
        and can be checked syntactically by software to help produce a well formed document.</p>
