Typo, changing "tag" to "tab".

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
     <ul>
       <li>A letter.</li>
       <li>A number.</li>
-      <li>A tag.</li>
+      <li>A tab.</li>
       <li>A non-terminal or non-joining punctuation (such as  « ‹ “ $ ( [ { ). Conversely, may not start with a terminal or joining punctuation (such as: ? ! ¡ ።) ] } / % – ” › » ፡ ፣ ፤ ፥ ፦ space, math operators)</li>
     </ul>
 
