Updates to Inline Lists section.

--- a/index.html
+++ b/index.html
@@ -558,102 +558,118 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
           <p>In digital documents such as in web pages and eBooks, it is recommended that the appearance of either <span class="uname">U+0020 SPACE</span> [ ] or <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [፡] be configurable as a user preference.  An easy to access “space” toggle button would enhance a viewing application’s usability.</p>
         </section>
   </section>
-      <section id="lists_and_counters">
+    <section id="lists_and_counters">
     <h3>Lists and Counters</h3>
     <section id="bullet_lists">
-          <h4>Bullet Lists</h4>
-          <p>Bullet lists are utilized regularly in Ethiopic literature. Authors using a computer or typewriter will work with the list marker
+        <h4>Bullet Lists</h4>
+        <p>Bullet lists are utilized regularly in Ethiopic literature. Authors using a computer or typewriter will work with the list marker
         symbols made available by their software or machine. Many marker, or “bullet”, symbols are accepted for Ethiopic literature though not all
         will be considered optimal.</p>
-          <figure id="circle_bullet_size_samples"> <img src="images/circle-bullet-size-samples.png" alt=""/>
-        <figcaption>Circle bullet size relative to letter height.</figcaption>
-      </figure>
-          <figure id="square_bullet_size_samples"> <img src="images/square-bullet-size-samples.png" alt=""/>
-        <figcaption>Square bullet size relative to letter height.</figcaption>
-      </figure>
-          <figure id="inline_list_with_spaces"> <img src="images/diamond-bullet-size-samples.png" alt=""/>
-        <figcaption>Diamond bullet size relative to letter height.</figcaption>
-      </figure>
-          <div class="issues">
-        <p>Issues/Questions:</p>
-        <ol>
-              <li>What are the preferred bullet shapes?</li>
-              <li>What are the preferred shape sequences in nested lists (e.g. bullet hierarchy)?</li>
-              <li>What is bullet height and width relative to letter dimensions?</li>
-              <li>What is the default distance of the list item text from the bullet?</li>
-              <li>Are lists indented (left  margin)? If so, how much?</li>
-              <li>Examples are needed for pre-digital, classical, literature.</li>
-              <li>Diamond shaped bullets are found commonly and may represent a desired default.
+        <figure id="circle_bullet_size_samples"> <img src="images/circle-bullet-size-samples.png" alt=""/>
+          <figcaption>Circle bullet size relative to letter height.</figcaption>
+        </figure>
+        <figure id="square_bullet_size_samples"> <img src="images/square-bullet-size-samples.png" alt=""/>
+          <figcaption>Square bullet size relative to letter height.</figcaption>
+        </figure>
+        <figure id="inline_list_with_spaces"> <img src="images/diamond-bullet-size-samples.png" alt=""/>
+          <figcaption>Diamond bullet size relative to letter height.</figcaption>
+        </figure>
+        <div class="issues">
+          <p>Issues/Questions:</p>
+          <ol>
+            <li>What are the preferred bullet shapes?</li>
+            <li>What are the preferred shape sequences in nested lists (e.g. bullet hierarchy)?</li>
+            <li>What is bullet height and width relative to letter dimensions?</li>
+            <li>What is the default distance of the list item text from the bullet?</li>
+            <li>Are lists indented (left  margin)? If so, how much?</li>
+            <li>Examples are needed for pre-digital, classical, literature.</li>
+            <li>Diamond shaped bullets are found commonly and may represent a desired default.
             The Unicode standard provides a number of similar diamond shaped symbols. From this set of diamond symbols, those suitable for adorning Ethiopic bullet lists must be determined.
             <p style="margin-left: 20px">⬩ (U+2B29)<br/>
                   ◆ (U+25C6)<br/>
                   ⬥ (U+2B25)<br/>
                   ❖ (U+2756)<br/>
                   ♦ (U+2666)</p>
-          </li>
-              <li>Do copy editors or publishers set a policy for list symbols, or leave it up to the author to decide?</li>
-              <li>Of interest: when are bullet lists first found in Ethiopic writing and in what form?</li>
-            </ol>
-      </div>
+            </li>
+            <li>Do copy editors or publishers set a policy for list symbols, or leave it up to the author to decide?</li>
+            <li>Of interest: when are bullet lists first found in Ethiopic writing and in what form?</li>
+          </ol>
+        </div>
           <!-- See reference: http://unicode-search.net/unicode-namesearch.pl?term=DIAMOND -->
-        </section>
+    </section>
+
     <section id="counter_suffix">
-          <h4>Ordered List Counter Suffix</h4>
-          <p>In Ethiopic ordered lists a number of symbols are used for the counter suffix.
-             For example: "/" , "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
-          <div class="issues">
+      <h4>Ordered List Counter Suffix</h4>
+      <p>In Ethiopic ordered lists a number of symbols are used for the counter suffix.
+         For example: "/" , "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
+      <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>What are the preferred counter suffix symbols? What is the best default?</li>
-              <li>How much, if any, white space follows the suffix? Perhaps the same amount of space as would follow a bullet symbol?</li>
-              <li>Do copy editors or publishers set a policy for counter suffix, or leave it up to the author to decide?</li>
-              <li>Of interest: when are ordered lists first found in Ethiopic writing and in what form?</li>
-            </ol>
+          <li>What are the preferred counter suffix symbols? What is the best default?</li>
+          <li>How much, if any, white space follows the suffix? Perhaps the same amount of space as would follow a bullet symbol?</li>
+          <li>Do copy editors or publishers set a policy for counter suffix, or leave it up to the author to decide?</li>
+          <li>Of interest: when are ordered lists first found in Ethiopic writing and in what form?</li>
+        </ol>
       </div>
-        </section>
+    </section>
+
     <section id="counter_suffix_alignment">
-          <h4>Counter Suffix Alignment</h4>
-          <p>Ethiopic corpus will present lists with two styles of alignment. These are a left side alignment at the
+      <h4>Counter Suffix Alignment</h4>
+      <p>Ethiopic corpus will present lists with two styles of alignment. These are a left side alignment at the
         list counter, or alignment along the counter suffix. Layout software will align a list at the suffix in
         keeping with the later style.  The former style (left justified at counter) may reflect a limitation of the
         layout technology employed and not a preference of the author, copy editor or typesetter. A depiction of these
         two alignment styles is presented in the following figures:</p>
-          <figure id="counter_suffix_left_justified"> <img src="images/list-aligned-on-counter-left.png" alt=""/>
+      <figure id="counter_suffix_left_justified"> <img src="images/list-aligned-on-counter-left.png" alt=""/>
         <figcaption>Alphabetical list aligned justified on counter left.</figcaption>
       </figure>
           <figure id="counter_suffix_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt=""/>
         <figcaption>Alphabetical list aligned on suffix.</figcaption>
       </figure>
-          <div class="issues">
+      <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>What alignment style(s) do stakeholders desire?</li>
-            </ol>
+          <li>What alignment style(s) do stakeholders desire?</li>
+        </ol>
       </div>
-        </section>
+    </section>
+
     <section id="inline_lists">
-          <h4>Inline Lists</h4>
-          <p><em>How much space after counter suffix? Is the space after suffix the different when Ethiopic wordspace is in use?</em></p>
-          <figure id="inline_list_with_wordspaces"> <img src="images/inline-list-with-wordspace.png" alt=""/>
+      <h4>Inline Lists</h4>
+      <p>Inlined enumerated lists are commonly found in Ethiopic documents. Inline lists will follow the same sequences as regular lists.  However,
+      the spacing after the counter suffix may be different.  Typically a regular keyboard space is observed following the suffix, if any. This
+      is most likely a matter of convenience for the author and not necessarily representative of good formatting.</p>
+
+      <figure id="inline_list_with_wordspaces"> <img src="images/inline-list-with-wordspace.png" alt=""/>
         <figcaption>Ethiopic inline list sample using wordspaces with 3 spacings (none, hair and thin) following the counter suffix.</figcaption>
       </figure>
-          <figure id="inline_list_with_space"> <img src="images/inline-list-with-space.png" alt=""/>
+      <figure id="inline_list_with_space"> <img src="images/inline-list-with-space.png" alt=""/>
         <figcaption>Ethiopic inline list sample using spaces with 3 spacings (none, hair and thin) following the counter suffix.</figcaption>
       </figure>
-        </section>
-    <section id="numbered_lists">
-          <h4>Numbered Lists</h4>
-          <p>Ethiopic literature will apply ordered numbered list using both Ethiopic and Western numeral systems. Ethiopic numeral
-        lists are addressed in the <a href="https://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a> section of the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
-          <div class="issues">
+
+      <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>What is the counter suffix preference with Ethiopic numbers?</li>
-              <li>What is the counter suffix preference with western numbers?</li>
-              <li>Are there any sublist (nested list) considerations?</li>
-            </ol>
+          <li>How much space (what width) should appear after the counter suffix?</li>
+          <li>Is the space after the counter suffix different when Ethiopic wordspace is used?</li>
+        </ol>
       </div>
-        </section>
+    </section>
+
+    <section id="numbered_lists">
+      <h4>Numbered Lists</h4>
+      <p>Ethiopic literature will apply ordered numbered list using both Ethiopic and Western numeral systems. Ethiopic numeral
+        lists are addressed in the <a href="https://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a> section of the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
+      <div class="issues">
+        <p>Issues/Questions:</p>
+        <ol>
+          <li>What is the counter suffix preference with Ethiopic numbers?</li>
+          <li>What is the counter suffix preference with western numbers?</li>
+          <li>Are there any sublist (nested list) considerations?</li>
+        </ol>
+      </div>
+    </section>
+
     <section id="alphabetical_lists">
           <h4>Alphabetical (ሀለሐመ) Lists</h4>
           <p>The Unicode standard encodes Ethiopic syllables for many languages using Ethiopic script past and present.
